# aoc

./: .gitignore  day_10.py  day_3.py  day_8.py  day_9.py  init_day.py  pyproject.toml  template.py
2021/day_1/: day_1.py
2021/day_10/: day_10.py
2021/day_11/: day_11.py
2021/day_2/: day_2.py
2021/day_3/: day_3.py
2021/day_4/: day_4.py
2021/day_5/: day_5.py
2021/day_6/: day_6.py
2021/day_7/: day_7.py
2021/day_8/: day_8.py
2021/day_9/: day_9.py
2022/: README.md  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py
2023/: day_1.py  day_10.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
2023/src/: main.rs
2024/: day_1.py  day_2.py
2025/: day_1.py  day_10.py  day_11.py  day_12.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
2025/inputs/: day_5_test.txt
