[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "ruff>=0.14.7",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
